Clase 2 terminada y correccion errores

--- a/1-Manejo_Pandas_Oscars/Analisis_Ganadores_Oscars.ipynb
+++ b/1-Manejo_Pandas_Oscars/Analisis_Ganadores_Oscars.ipynb
@@ -19800,8 +19800,8 @@
     "oscars_short.drop(columns='last_ten_years',inplace=True)\n",
     "oscars_short.head(5)\n",
     "                  \n",
-    "#Ahora borramos 2 columnas a la vez: VER COMOOOO, VER LA SINTAXIS:\n",
-    "#oscars_short.drop(columns=({'year_of_award','last_ten_years'},inplace=True)\n"
+    "#Para borrar 2 columnas a la vez: \n",
+    "#oscars_short.drop(columns=['year_of_award','last_ten_years'],inplace=True)\n"
    ]
   },
   {
@@ -25663,7 +25663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
