Manejo Pandas actualizado

--- a/1-Manejo_Pandas_Oscars/1-Analisis_Ganadores_Oscars-Parte1.ipynb
+++ b/1-Manejo_Pandas_Oscars/1-Analisis_Ganadores_Oscars-Parte1.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis de Datos sobre DS de Ganadores de Oscars.\n",
+    "# Análisis de Datos sobre DS de Ganadores de Oscars - Parte 1.\n",
     "\n",
-    "### DS Utilizado: https://www.kaggle.com/fmejia21/demographics-of-academy-awards-oscars-winners"
+    "### DS Utilizado: https://www.kaggle.com/fmejia21/demographics-of-academy-awards-oscars-winners\n",
+    "\n",
+    "![No se cargo la imagen correctamente](data/Oscars.jpg \"Imagen Oscars\")"
    ]
   },
   {
@@ -25,16 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "import pandas as pd #To provide high-performance, easy-to-use data structures and data analysis tools for the Python programming\n",
+    "import numpy as np #To add support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays.\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "#Para tener una salida de los comandos de ploteos mostrados (NO ENTENDI, VER):\n",
-    "%matplotlib inline "
+    "import matplotlib.pyplot as plt # Plotting library for the Python programming language and its numerical mathematics extension NumPy.\n",
+    "%matplotlib inline\n",
+    "# to have the output of plotting commands displayed inline within frontends like the Jupyter notebook, directly below the code cell that produced it. The resulting plots will then also be stored in the notebook document."
    ]
   },
   {
@@ -19800,8 +19802,8 @@
     "oscars_short.drop(columns='last_ten_years',inplace=True)\n",
     "oscars_short.head(5)\n",
     "                  \n",
-    "#Para borrar 2 columnas a la vez: \n",
-    "#oscars_short.drop(columns=['year_of_award','last_ten_years'],inplace=True)\n"
+    "#Ahora borramos 2 columnas a la vez: VER COMOOOO, VER LA SINTAXIS:\n",
+    "#oscars_short.drop(columns=({'year_of_award','last_ten_years'},inplace=True)\n"
    ]
   },
   {
@@ -25663,7 +25665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
